engines/ep/src/dcp/producer.cc
@@ -1074,6 +1074,7 @@ bool DcpProducer::handleResponse(const protocol_binary_response_header* resp) {
     }
 
     const auto opcode = resp->response.getClientOpcode();
+    const auto responseStatus = resp->response.getStatus();
     if (opcode == cb::mcbp::ClientOpcode::DcpSetVbucketState ||
         opcode == cb::mcbp::ClientOpcode::DcpSnapshotMarker) {
         const auto opaque = resp->response.getOpaque();
@@ -1106,40 +1107,47 @@ bool DcpProducer::handleResponse(const protocol_binary_response_header* resp) {
                opcode == cb::mcbp::ClientOpcode::DcpDeletion ||
                opcode == cb::mcbp::ClientOpcode::DcpExpiration ||
                opcode == cb::mcbp::ClientOpcode::DcpStreamEnd ||
-               opcode == cb::mcbp::ClientOpcode::DcpSystemEvent ||
-               opcode == cb::mcbp::ClientOpcode::DcpCommit ||
-               opcode == cb::mcbp::ClientOpcode::DcpPrepare ||
-               opcode == cb::mcbp::ClientOpcode::DcpAbort) {
-        // The consumer could of closed the stream, enoent is expected, but
-        // any other errors are not expected.
-        if (resp->response.getStatus() == cb::mcbp::Status::KeyEnoent) {
-            logger->info(
-                    "DcpProducer::handleResponse KeyEnoent received "
-                    "response:{}",
-                    resp->response.toJSON(true).dump());
-        } else if (resp->response.getStatus() == cb::mcbp::Status::Einval &&
-                   (opcode == cb::mcbp::ClientOpcode::DcpCommit ||
-                    opcode == cb::mcbp::ClientOpcode::DcpPrepare ||
-                    opcode == cb::mcbp::ClientOpcode::DcpAbort)) {
-            logger->error(
-                    "Disconnecting. Received status Einval for op:{} "
-                    "response:{}",
-                    to_string(opcode),
-                    resp->response.toJSON(true).dump());
-            // In this case we need to disconnect as we must have sent an
-            // invalid. Mutation or packet to the consumer e.g. we sent an abort
-            // to the consumer in a non disk snapshot without it having seen a
-            // prepare.
-            return false;
-        } else {
+               opcode == cb::mcbp::ClientOpcode::DcpSystemEvent) {
+        // The consumer could of closed the stream (DcpStreamEnd), enoent is
+        // expected, but any other errors are not expected.
+        if (responseStatus != cb::mcbp::Status::Success) {
             logger->warn(
                     "DcpProducer::handleResponse received unexpected "
                     "response:{}",
                     resp->response.toJSON(true).dump());
         }
-
-        // TODO: When nacking is implemented we need to handle these responses
         return true;
+    } else if (opcode == cb::mcbp::ClientOpcode::DcpCommit ||
+               opcode == cb::mcbp::ClientOpcode::DcpPrepare ||
+               opcode == cb::mcbp::ClientOpcode::DcpAbort) {
+        if (responseStatus == cb::mcbp::Status::KeyEnoent ||
+            responseStatus == cb::mcbp::Status::Einval) {
+            logger->error(
+                    "Disconnecting. Received status {} for op:{} "
+                    "response:{}",
+                    to_string(responseStatus),
+                    to_string(opcode),
+                    resp->response.toJSON(true).dump());
+            // KeyEnoent:
+            // In this case we receive a KeyEnoent, we need to disconnect as we
+            // must have sent an a commit or abort of key that the consumer is
+            // unaware of and we should never see KeyEnoent from a DcpPrepare.
+            // Einval:
+            // If we have seen a Einval we also need to disconnect as we must
+            // have sent an invalid. Mutation or packet to the consumer e.g. we
+            // sent an abort to the consumer in a non disk snapshot without it
+            // having seen a prepare.
+            return false;
+        } else {
+            // Keep connection open for all other response codes
+            if (responseStatus != cb::mcbp::Status::Success) {
+                logger->warn(
+                        "DcpProducer::handleResponse received unexpected "
+                        "response:{}",
+                        resp->response.toJSON(true).dump());
+            }
+            return true;
+        }
     } else if (opcode == cb::mcbp::ClientOpcode::DcpNoop) {
         if (noopCtx.opaque == resp->response.getOpaque()) {
             noopCtx.pendingRecv = false;
